# test-tm12-code

hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/: .gitignore  README.md  colcon_build.bash
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/.devcontainer/: Dockerfile  devcontainer.json  initializecommand.bash
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/grpr2f85/grpr2f85_driver/: CMakeLists.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/grpr2f85/grpr2f85_driver/launch/: grpr2f85.launch.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/grpr2f85/grpr2f85_driver/src_py/: grpr2f85_driver.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/grpr2f85/grpr2f85_ifaces/: CMakeLists.txt
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/grpr2f85/grpr2f85_ifaces/srv/: GetGripperStatus.srv  Reset_old.srv
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_driver/: CMakeLists.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_driver/launch/: iamech.launch.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_driver/src_py/: iamech_plc_driver.py  iamech_ros_driver.py  iamech_ros_odom.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_driver/src_py/old/: PLC_Manager_old.py  beckhoff_old.py  iamech_odom_old.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_ifaces/: CMakeLists.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/iamech_ros2/iamech_ifaces/msg/: PLCStatus.msg  Wheel.msg
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/pkg_tmp_cpp_py/: CMakeLists.txt  Readme.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/pkg_tmp_cpp_py/src_cpp/: cpp_node.cpp
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/pkg_tmp_cpp_py/src_py/: py_node.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/: CMakeLists.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/config/: calibration_camera_eih_001.yaml  calibration_node_params.yaml  camera_config.yaml  sicks300_back.yaml  sicks300_front.yaml  vlp16_filter.yaml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/include/tm12_amm/: calibration.hpp
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/launch/: keyboard_publisher.launch.py  robot.launch.py  robot_amr.launch.py  robot_amr_core.launch.py  robot_arm.launch.py  robot_arm_core.launch.py  robot_gui.launch.py  rtabmap.launch.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/src_cpp/: calibration.cpp  cpp_node.cpp  keyboard_pub.cpp  tm12_amm.cpp
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/src_py/: Note.md  calibration.py  calibration_node.py  keyboard_pub.py  tm12_amm.py  tm12_amm_backup.py  tm12_amm_bck_250715.py  workspace_c23322231.py  workspace_shihkuei.py
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm/xacro/: tm12_amm.urdf.xacro
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm_interfaces/: CMakeLists.txt  package.xml
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm_interfaces/action/: Calibration.action  Dotask.action
hardware_tm12_amm-snapshot-hsk-2025-08-16_lab_state/src/tm12_amm/tm12_amm_interfaces/srv/: Calibration.srv
